--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,8 +1,7 @@
-@import "tailwindcss";
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "@tailwindcss/typography";
 
 @plugin "daisyui" {
     themes: dark --default;
