--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,288 @@
 ---
+import MainLayout from "../layouts/MainLayout.astro";
 import "../assets/app.css";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>Astro</h1>
-  </body>
-</html>
+<MainLayout>
+  <h1>Hello World</h1>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam id
+    veniam, nam culpa magni ratione vitae omnis facere ipsum blanditiis minima
+    quibusdam esse ullam natus odio ipsa quia quidem perferendis? Lorem ipsum,
+    dolor sit amet consectetur adipisicing elit. Laboriosam id veniam, nam culpa
+    magni ratione vitae omnis facere ipsum blanditiis minima quibusdam esse
+    ullam natus odio ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet
+    consectetur adipisicing elit. Laboriosam id veniam, nam culpa magni ratione
+    vitae omnis facere ipsum blanditiis minima quibusdam esse ullam natus odio
+    ipsa quia quidem perferendis? Lorem ipsum, dolor sit amet consectetur
+    adipisicing elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis
+    facere ipsum blanditiis minima quibusdam esse ullam natus odio ipsa quia
+    quidem perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing
+    elit. Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Laboriosam id veniam, nam culpa magni ratione vitae omnis facere ipsum
+    blanditiis minima quibusdam esse ullam natus odio ipsa quia quidem
+    perferendis?
+  </p>
+</MainLayout>
