📝 WIP Cursor rules

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -99,7 +99,7 @@
   }
 </style>
 
-<script>
+<script client:load>
   const header = document.getElementById("header");
 
   window.addEventListener("scroll", () => {
